# smart-money-GPT-Project

./: .env.example  .gitignore  HOTFIX_NOTES.md  KEY_INDICATOR_EXPLANATION_NOTES.md  README.md  VERSION_2_1_NOTES.md  VERSION_2_2_NOTES.md  VERSION_2_3_NOTES.md  VERSION_2_4_NOTES.md  VERSION_2_5_NOTES.md  VERSION_2_6_NOTES.md  VERSION_2_7_NOTES.md  VERSION_2_8_NOTES.md  VERSION_2_9_NOTES.md  VERSION_3_0_NOTES.md  VERSION_3_1_HOTFIX.md  config.yaml  index.html  pyproject.toml  requirements.txt  streamlit_app.py
data/optional_feeds/: README.md  SAMPLE.json
docs/: ACCUMULATION_DISTRIBUTION_INDICATORS_V2_1.md  AGENT_DESIGN.md  DARK_POOL_OFF_EXCHANGE_INDICATORS_V2_2.md  INDICATOR_CATALOG.md  INSIDER_TRADING_INDICATORS_V2_4.md  INSTITUTIONAL_WHALE_OWNERSHIP_INDICATORS_V2_3.md  OPTIONAL_FEED_SCHEMA.json  OPTIONS_FLOW_INDICATORS_V2_5.md
src/smart_money_agent/: agent.py  alternative_data.py  indicators.py  main.py  prediction.py  report.py  scanner.py  schemas.py  scoring.py
src/smart_money_agent/data_sources/: finra.py  market.py  options_flow.py  public_free.py  sec_edgar.py
tests/: test_accumulation_distribution_v2_1.py  test_dark_pool_v2_2.py  test_indicators.py  test_insider_v2_4.py  test_institutional_v2_3.py  test_options_v2_5.py  test_public_free_v2_8.py
